fixed company name on smallscreen devices

--- a/src/components/Home/Body/Cards/CardLeft/CardLeft.module.css
+++ b/src/components/Home/Body/Cards/CardLeft/CardLeft.module.css
@@ -151,6 +151,12 @@
   background-color: hsl(0, 100%, 86%);
 }
 
+@media (max-width: 500px) {
+  .compania {
+    margin-top: -15px;
+  }
+}
+
 @media (min-width: 1270px) {
   .Espacamento {
     margin-top: 0;
