--- a/src/components/Home/Body/Cards/CardRight/CardRight.module.css
+++ b/src/components/Home/Body/Cards/CardRight/CardRight.module.css
@@ -75,7 +75,6 @@
   margin-top: 1.5vw;
   margin-bottom: 1.5vw;
 
-
   justify-content: center;
   text-align: center;
   align-items: center;
@@ -154,6 +153,12 @@
 
 .Pesquisa {
   background-color: hsl(0, 100%, 86%);
+}
+
+@media (max-width: 500px) {
+  .compania {
+    margin-top: -15px;
+  }
 }
 
 @media (min-width: 1270px) {
